--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "accommodation",
-  "version": "1.0.0",
-  "description": "Web application for Accommodation in Prague Zbraslav.",
+  "version": "1.1.0",
+  "description": "Web application for Accommodation in Prague Zbraslav, integrated with Booking.com iCal and manual booking confirmation.",
   "main": "server/server.js",
   "scripts": {
     "start": "node server/server.js"
@@ -11,12 +11,12 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "ical.js": "^1.4.0",
-    "node-cron": "^3.0.2",
-    "nodemailer": "^6.9.4",
-    "qrcode": "^1.5.1",
-    "node-fetch": "^2.6.1"
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "ical.js": "^1.5.0",
+    "node-cron": "^3.0.3",
+    "node-fetch": "^2.7.0",
+    "nodemailer": "^6.9.13",
+    "qrcode": "^1.5.3"
   }
 }
