--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "accommodation",
-  "version": "1.1.0",
-  "description": "Web application for Accommodation in Prague Zbraslav, integrated with Booking.com iCal and manual booking confirmation.",
+  "version": "2.0.0",
+  "description": "Web application for Accommodation in Prague Zbraslav with iCal sync and smoke-glass design.",
   "main": "server/server.js",
   "scripts": {
     "start": "node server/server.js"
   },
-  "author": "Your Name",
+  "author": "AI Assistant",
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.20.2",
